--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,6 +28,11 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+
+    <link rel="stylesheet" href="billboard.css" />
+    <script src="billboard.js"></script>
+
     <title>React App</title>
     <style>
       body {
